tests/baselines/reference/templateLiteralTypes9.errors.txt
templateLiteralTypes9.ts(19,3): error TS2322: Type '`${string}_BAZ`' is not assignable to type '`${string}_FOO` | `${string}_BAR`'.
templateLiteralTypes9.ts(20,8): error TS7006: Parameter 'arg' implicitly has an 'any' type.


==== templateLiteralTypes9.ts (2 errors) ====
    type Target =
      | { type: `${string}_FOO`; cb: (arg: number) => void }
      | { type: `${string}_BAR`; cb: (arg: string) => void };
    
    declare const str: string;
    
    const obj1: Target = {
      type: `${str}_FOO`,
      cb: (arg) => {},
    };
    
    const obj2: Target = {
      type: `${str}_BAR`,
      cb: (arg) => {},
    };
    
    // error
    const obj3: Target = {
      type: `${str}_BAZ`,
      ~~~~
!!! error TS2322: Type '`${string}_BAZ`' is not assignable to type '`${string}_FOO` | `${string}_BAR`'.
!!! related TS6500 templateLiteralTypes9.ts:2:7: The expected type comes from property 'type' which is declared here on type 'Target'
      cb: (arg) => {},
           ~~~
!!! error TS7006: Parameter 'arg' implicitly has an 'any' type.
    };
    